# rag

./: .env.example  .gitignore  AGENTS.md  README.md  benchmark.py  config.py  index.py  ollama_client.py  pyproject.toml  requirements.txt  search.py  setup.sh
indexer/: __init__.py  chunker.py  document_loader.py  embedder.py  tracker.py  vectorstore.py
search/: __init__.py  cli.py  generator.py  retriever.py
