[project]
name = "rag"
version = "0.1.0"
description = "Lokális RAG alkalmazás Ollama-val — Mac Mini M4 24GB-re optimalizálva"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1.0",
    "ollama>=0.4.0",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
]
